Error on MatchMaking-App.py

--- a/Data-Gathering/Refining-Profile-Data.ipynb
+++ b/Data-Gathering/Refining-Profile-Data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"mechanic_profiles.pkl\",'rb') as fp:\r\n",
+    "with open(\"../mechanic_profiles.pkl\",'rb') as fp:\r\n",
     "    df = pickle.load(fp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,17 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Bios</th>\n      <th>location</th>\n      <th>Qualification</th>\n      <th>Specialisation</th>\n      <th>Age</th>\n      <th>year of experience</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Passionate analyst. Explorer. Hipster-friendly...</td>\n      <td>Kalimantan</td>\n      <td>High School</td>\n      <td>[Advanced Auto Diagnostic Techniques, Automoti...</td>\n      <td>21</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Twitter fanatic. Devoted web fanatic. Zombie e...</td>\n      <td>Bali</td>\n      <td>High School</td>\n      <td>[Advanced Vehicle Diagnostics and Management, ...</td>\n      <td>29</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Total alcohol practitioner. Social media buff....</td>\n      <td>Java</td>\n      <td>Bachelors Degree</td>\n      <td>[Rail Apprenticeships, Motor Vehicle Engineering]</td>\n      <td>23</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Extreme twitter advocate. Hardcore internet ju...</td>\n      <td>Jakata</td>\n      <td>Bachelors Degree</td>\n      <td>[Automotive Apprenticeships, Motor Vehicle Eng...</td>\n      <td>20</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Problem solver. Devoted introvert. Food geek. ...</td>\n      <td>Palangkaraya</td>\n      <td>High School</td>\n      <td>[Advanced Vehicle Diagnostics and Management, ...</td>\n      <td>24</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>6160</th>\n      <td>Lifelong zombie junkie. Friendly travel buff. ...</td>\n      <td>Bandung</td>\n      <td>Bachelors Degree</td>\n      <td>[Heavy Vehicle Service, Advanced Vehicle Diagn...</td>\n      <td>19</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>6161</th>\n      <td>Total introvert. Tv specialist. Pop culture ni...</td>\n      <td>Bandung</td>\n      <td>High School</td>\n      <td>[Advanced Vehicle Diagnostics and Management, ...</td>\n      <td>31</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>6162</th>\n      <td>Friendly zombie specialist. Avid bacon expert....</td>\n      <td>Kalimantan</td>\n      <td>Diploma</td>\n      <td>[Advanced Auto Diagnostic Techniques, Advanced...</td>\n      <td>22</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>6163</th>\n      <td>Wannabe coffee practitioner. Troublemaker. Com...</td>\n      <td>Java</td>\n      <td>High School</td>\n      <td>[Heavy Vehicle Service, Advanced Vehicle Diagn...</td>\n      <td>21</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>6164</th>\n      <td>Lifelong travel expert. Evil gamer. Infuriatin...</td>\n      <td>Palangkaraya</td>\n      <td>Professional Mechanic</td>\n      <td>[Heavy Vehicle Service, Advanced Auto Diagnost...</td>\n      <td>34</td>\n      <td>7</td>\n    </tr>\n  </tbody>\n</table>\n<p>6165 rows × 6 columns</p>\n</div>",
-      "text/plain": "                                                   Bios      location  \\\n0     Passionate analyst. Explorer. Hipster-friendly...    Kalimantan   \n1     Twitter fanatic. Devoted web fanatic. Zombie e...          Bali   \n2     Total alcohol practitioner. Social media buff....          Java   \n3     Extreme twitter advocate. Hardcore internet ju...        Jakata   \n4     Problem solver. Devoted introvert. Food geek. ...  Palangkaraya   \n...                                                 ...           ...   \n6160  Lifelong zombie junkie. Friendly travel buff. ...       Bandung   \n6161  Total introvert. Tv specialist. Pop culture ni...       Bandung   \n6162  Friendly zombie specialist. Avid bacon expert....    Kalimantan   \n6163  Wannabe coffee practitioner. Troublemaker. Com...          Java   \n6164  Lifelong travel expert. Evil gamer. Infuriatin...  Palangkaraya   \n\n              Qualification  \\\n0               High School   \n1               High School   \n2          Bachelors Degree   \n3          Bachelors Degree   \n4               High School   \n...                     ...   \n6160       Bachelors Degree   \n6161            High School   \n6162                Diploma   \n6163            High School   \n6164  Professional Mechanic   \n\n                                         Specialisation  Age  \\\n0     [Advanced Auto Diagnostic Techniques, Automoti...   21   \n1     [Advanced Vehicle Diagnostics and Management, ...   29   \n2     [Rail Apprenticeships, Motor Vehicle Engineering]   23   \n3     [Automotive Apprenticeships, Motor Vehicle Eng...   20   \n4     [Advanced Vehicle Diagnostics and Management, ...   24   \n...                                                 ...  ...   \n6160  [Heavy Vehicle Service, Advanced Vehicle Diagn...   19   \n6161  [Advanced Vehicle Diagnostics and Management, ...   31   \n6162  [Advanced Auto Diagnostic Techniques, Advanced...   22   \n6163  [Heavy Vehicle Service, Advanced Vehicle Diagn...   21   \n6164  [Heavy Vehicle Service, Advanced Auto Diagnost...   34   \n\n      year of experience  \n0                      8  \n1                      5  \n2                     13  \n3                      7  \n4                      8  \n...                  ...  \n6160                  12  \n6161                   6  \n6162                   7  \n6163                   5  \n6164                   7  \n\n[6165 rows x 6 columns]"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Bios</th>\n      <th>location</th>\n      <th>Qualification</th>\n      <th>Specialisation</th>\n      <th>Age</th>\n      <th>year of experience</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Passionate analyst. Explorer. Hipster-friendly...</td>\n      <td>Jakata</td>\n      <td>High School</td>\n      <td>[Advanced Auto Diagnostic Techniques, Motor Ve...</td>\n      <td>18</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Twitter fanatic. Devoted web fanatic. Zombie e...</td>\n      <td>Jakata</td>\n      <td>Diploma</td>\n      <td>[Rail Apprenticeships, Rail Engineering Operat...</td>\n      <td>24</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Total alcohol practitioner. Social media buff....</td>\n      <td>Java</td>\n      <td>Diploma</td>\n      <td>[Rail Apprenticeships, Light Vehicle Service, ...</td>\n      <td>22</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Extreme twitter advocate. Hardcore internet ju...</td>\n      <td>Jakata</td>\n      <td>Professional Mechanic</td>\n      <td>[Advanced Auto Diagnostic Techniques, Advanced...</td>\n      <td>24</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Problem solver. Devoted introvert. Food geek. ...</td>\n      <td>Samarinda</td>\n      <td>Diploma</td>\n      <td>[Rail Apprenticeships, Motor Vehicle Engineeri...</td>\n      <td>22</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>6160</th>\n      <td>Lifelong zombie junkie. Friendly travel buff. ...</td>\n      <td>Java</td>\n      <td>High School</td>\n      <td>[Rail Apprenticeships, Automotive Apprenticesh...</td>\n      <td>22</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>6161</th>\n      <td>Total introvert. Tv specialist. Pop culture ni...</td>\n      <td>Java</td>\n      <td>Bachelors Degree</td>\n      <td>[Light Vehicle Service, Advanced Vehicle Diagn...</td>\n      <td>19</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>6162</th>\n      <td>Friendly zombie specialist. Avid bacon expert....</td>\n      <td>Java</td>\n      <td>Diploma</td>\n      <td>[Light Vehicle Service, Automotive Apprentices...</td>\n      <td>19</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>6163</th>\n      <td>Wannabe coffee practitioner. Troublemaker. Com...</td>\n      <td>Bandung</td>\n      <td>Professional Mechanic</td>\n      <td>[Motor Vehicle Engineering, Heavy Vehicle Serv...</td>\n      <td>26</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>6164</th>\n      <td>Lifelong travel expert. Evil gamer. Infuriatin...</td>\n      <td>Bandung</td>\n      <td>Bachelors Degree</td>\n      <td>[Rail Apprenticeships, Light Vehicle Service, ...</td>\n      <td>37</td>\n      <td>14</td>\n    </tr>\n  </tbody>\n</table>\n<p>6165 rows × 6 columns</p>\n</div>",
+      "text/plain": "                                                   Bios   location  \\\n0     Passionate analyst. Explorer. Hipster-friendly...     Jakata   \n1     Twitter fanatic. Devoted web fanatic. Zombie e...     Jakata   \n2     Total alcohol practitioner. Social media buff....       Java   \n3     Extreme twitter advocate. Hardcore internet ju...     Jakata   \n4     Problem solver. Devoted introvert. Food geek. ...  Samarinda   \n...                                                 ...        ...   \n6160  Lifelong zombie junkie. Friendly travel buff. ...       Java   \n6161  Total introvert. Tv specialist. Pop culture ni...       Java   \n6162  Friendly zombie specialist. Avid bacon expert....       Java   \n6163  Wannabe coffee practitioner. Troublemaker. Com...    Bandung   \n6164  Lifelong travel expert. Evil gamer. Infuriatin...    Bandung   \n\n              Qualification  \\\n0               High School   \n1                   Diploma   \n2                   Diploma   \n3     Professional Mechanic   \n4                   Diploma   \n...                     ...   \n6160            High School   \n6161       Bachelors Degree   \n6162                Diploma   \n6163  Professional Mechanic   \n6164       Bachelors Degree   \n\n                                         Specialisation  Age  \\\n0     [Advanced Auto Diagnostic Techniques, Motor Ve...   18   \n1     [Rail Apprenticeships, Rail Engineering Operat...   24   \n2     [Rail Apprenticeships, Light Vehicle Service, ...   22   \n3     [Advanced Auto Diagnostic Techniques, Advanced...   24   \n4     [Rail Apprenticeships, Motor Vehicle Engineeri...   22   \n...                                                 ...  ...   \n6160  [Rail Apprenticeships, Automotive Apprenticesh...   22   \n6161  [Light Vehicle Service, Advanced Vehicle Diagn...   19   \n6162  [Light Vehicle Service, Automotive Apprentices...   19   \n6163  [Motor Vehicle Engineering, Heavy Vehicle Serv...   26   \n6164  [Rail Apprenticeships, Light Vehicle Service, ...   37   \n\n      year of experience  \n0                     10  \n1                     13  \n2                     11  \n3                      6  \n4                     10  \n...                  ...  \n6160                   5  \n6161                   9  \n6162                   5  \n6163                   5  \n6164                  14  \n\n[6165 rows x 6 columns]"
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,15 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Bios</th>\n      <th>location</th>\n      <th>Qualification</th>\n      <th>Specialisation</th>\n      <th>Age</th>\n      <th>year of experience</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Passionate analyst. Explorer. Hipster-friendly...</td>\n      <td>Kalimantan</td>\n      <td>High School</td>\n      <td>[Advanced Auto Diagnostic Techniques, Automoti...</td>\n      <td>21</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Twitter fanatic. Devoted web fanatic. Zombie e...</td>\n      <td>Bali</td>\n      <td>High School</td>\n      <td>[Advanced Vehicle Diagnostics and Management, ...</td>\n      <td>29</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Total alcohol practitioner. Social media buff....</td>\n      <td>Java</td>\n      <td>Bachelors Degree</td>\n      <td>[Rail Apprenticeships, Motor Vehicle Engineering]</td>\n      <td>23</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Extreme twitter advocate. Hardcore internet ju...</td>\n      <td>Jakata</td>\n      <td>Bachelors Degree</td>\n      <td>[Automotive Apprenticeships, Motor Vehicle Eng...</td>\n      <td>20</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Problem solver. Devoted introvert. Food geek. ...</td>\n      <td>Palangkaraya</td>\n      <td>High School</td>\n      <td>[Advanced Vehicle Diagnostics and Management, ...</td>\n      <td>24</td>\n      <td>8</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                                                Bios      location  \\\n0  Passionate analyst. Explorer. Hipster-friendly...    Kalimantan   \n1  Twitter fanatic. Devoted web fanatic. Zombie e...          Bali   \n2  Total alcohol practitioner. Social media buff....          Java   \n3  Extreme twitter advocate. Hardcore internet ju...        Jakata   \n4  Problem solver. Devoted introvert. Food geek. ...  Palangkaraya   \n\n      Qualification                                     Specialisation  Age  \\\n0       High School  [Advanced Auto Diagnostic Techniques, Automoti...   21   \n1       High School  [Advanced Vehicle Diagnostics and Management, ...   29   \n2  Bachelors Degree  [Rail Apprenticeships, Motor Vehicle Engineering]   23   \n3  Bachelors Degree  [Automotive Apprenticeships, Motor Vehicle Eng...   20   \n4       High School  [Advanced Vehicle Diagnostics and Management, ...   24   \n\n   year of experience  \n0                   8  \n1                   5  \n2                  13  \n3                   7  \n4                   8  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Bios</th>\n      <th>location</th>\n      <th>Qualification</th>\n      <th>Specialisation</th>\n      <th>Age</th>\n      <th>year of experience</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Passionate analyst. Explorer. Hipster-friendly...</td>\n      <td>Jakata</td>\n      <td>High School</td>\n      <td>[Advanced Auto Diagnostic Techniques, Motor Ve...</td>\n      <td>18</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Twitter fanatic. Devoted web fanatic. Zombie e...</td>\n      <td>Jakata</td>\n      <td>Diploma</td>\n      <td>[Rail Apprenticeships, Rail Engineering Operat...</td>\n      <td>24</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Total alcohol practitioner. Social media buff....</td>\n      <td>Java</td>\n      <td>Diploma</td>\n      <td>[Rail Apprenticeships, Light Vehicle Service, ...</td>\n      <td>22</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Extreme twitter advocate. Hardcore internet ju...</td>\n      <td>Jakata</td>\n      <td>Professional Mechanic</td>\n      <td>[Advanced Auto Diagnostic Techniques, Advanced...</td>\n      <td>24</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Problem solver. Devoted introvert. Food geek. ...</td>\n      <td>Samarinda</td>\n      <td>Diploma</td>\n      <td>[Rail Apprenticeships, Motor Vehicle Engineeri...</td>\n      <td>22</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                                                Bios   location  \\\n0  Passionate analyst. Explorer. Hipster-friendly...     Jakata   \n1  Twitter fanatic. Devoted web fanatic. Zombie e...     Jakata   \n2  Total alcohol practitioner. Social media buff....       Java   \n3  Extreme twitter advocate. Hardcore internet ju...     Jakata   \n4  Problem solver. Devoted introvert. Food geek. ...  Samarinda   \n\n           Qualification                                     Specialisation  \\\n0            High School  [Advanced Auto Diagnostic Techniques, Motor Ve...   \n1                Diploma  [Rail Apprenticeships, Rail Engineering Operat...   \n2                Diploma  [Rail Apprenticeships, Light Vehicle Service, ...   \n3  Professional Mechanic  [Advanced Auto Diagnostic Techniques, Advanced...   \n4                Diploma  [Rail Apprenticeships, Motor Vehicle Engineeri...   \n\n   Age  year of experience  \n0   18                  10  \n1   24                  13  \n2   22                  11  \n3   24                   6  \n4   22                  10  "
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
